--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.0.0",
     "@prisma/client": "^5.12.1",
     "cookies-next": "^4.1.1",
     "next": "14.2.2",
